--- a/style/main.css
+++ b/style/main.css
@@ -41,7 +41,7 @@ header nav a:hover{
 /* Filme pricipal*/
 .filme-principal{
     background-image: linear-gradient(rgba(0, 0, 0, 5),rgba(0, 0, 0, .5)), url("/resources/HouseOfCards-Logo.png");
-    height: 400px;
+    min-height: 400px;
     background-size: cover;
 
     display: flex;
@@ -50,9 +50,35 @@ header nav a:hover{
     align-items: flex-start;
 }
 .filme-principal .description{
+    margin-top: 10px;
     margin-bottom: 90px;
 }
 
-.titulo{
+.filme-principal .titulo{
+    margin-top: 15%;
     font-size: 40px;
+    text-transform:uppercase;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.botao{
+    background-color: rgba(255, 255, 255, 0.5);
+    border: none;
+    color: white;
+
+    padding: 15px 30px;
+    margin-right: 15px;
+    font-size: 12px;
+
+    cursor: pointer;
+    transition: .3s ease all;
+}
+
+.botao i{
+    margin-right: 8px;
+}
+
+.botao:hover{
+    background: white;
+    color: black;
 }
