--- a/style/main.css
+++ b/style/main.css
@@ -82,3 +82,17 @@ header nav a:hover{
     background: white;
     color: black;
 }
+
+.container{
+    margin-left: 20px;
+}
+
+.filme-principal .container{
+    width: 70%;
+}
+
+.box-filme{
+    height: 100%;
+    width: 100%;
+    display: block;
+}
